samples/errors/bad-indents.stkn
  ifnot false
    return

func nothing()
        return
